[package]
name = "tf-drift"
version = "0.1.0"
edition = "2024"
authors = ["Vitalie Brinza"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
walkdir = "2.5.0"
